training data set

--- a/LSTM_project.ipynb
+++ b/LSTM_project.ipynb
@@ -224,11 +224,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 51,
       "metadata": {
-        "id": "BQw-uspUibZo"
+        "id": "BQw-uspUibZo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "705e6b68-03bb-48de-9367-9cec48e5beb1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Size of scaled training set: (112, 3)\n",
+            "trainX shape (106, 5, 3)\n",
+            "trainY shape (106, 1)\n"
+          ]
+        }
+      ],
       "source": [
         "#separate the years \n",
         "train_years = df[\"Year\"]\n",
@@ -239,19 +253,67 @@
         "#For an LSTM network, we use signmoid so we need to normalize the dataset \n",
         "scaler = StandardScaler()\n",
         "scaler = scaler.fit(df_training)\n",
-        "df_training_scaled = scaler.transform(df_training)"
+        "df_training_scaled = scaler.transform(df_training) \n",
+        "print(\"Size of scaled training set:\",df_training_scaled.shape)\n",
+        "\n",
+        "#create training data set based on new scaled data \n",
+        "trainX = []\n",
+        "trainY = []\n",
+        "\n",
+        "n_future = 2 #number of years we want to predict into the future\n",
+        "n_past = 5 #how many years in the past we use to predict the future\n",
+        "\n",
+        "#print(df_training_scaled[1:8,0:3])\n",
+        "\n",
+        "for i in range(n_past, len(df_training_scaled) - n_future +1):\n",
+        "  trainX.append(df_training_scaled[i-n_past:i, 0:df_training.shape[1]])\n",
+        "  trainY.append(df_training_scaled[i+n_future-1:i+n_future,0])\n",
+        "\n",
+        "trainX = np.array(trainX)\n",
+        "trainY = np.array(trainY)\n",
+        "\n",
+        "print(\"trainX shape\", trainX.shape)\n",
+        "print(\"trainY shape\", trainY.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
-        "id": "lNFbXOHtibZo"
+        "id": "lNFbXOHtibZo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f19a2c7c-bff3-4623-b80a-f614e3dd2fa9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0.80416869  0.16722002  1.13865059]\n",
+            " [ 1.51716999 -0.61120689  2.52650083]\n",
+            " [-0.71663039 -0.70743627  0.96308128]\n",
+            " [ 1.66052504 -1.46867936  0.84037955]\n",
+            " [-0.01706658 -1.65941973  0.30781202]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "#df_training_scaled[2-n_past:2, 0:df_training.shape[1]]\n",
+        "print(df_training_scaled[5-n_past:5, 0:df_training.shape[1]])"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "KxL7IMpuAiOO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -279,6 +341,7 @@
     "colab": {
       "name": "LSTM_project.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
